[gd_scene load_steps=5 format=3 uid="uid://bduswfya4e5lx"]

[ext_resource type="Script" path="res://car.gd" id="1_xkwxr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2j183"]
size = Vector3(2, 1, 4)

[sub_resource type="BoxMesh" id="BoxMesh_hc25p"]

[sub_resource type="CylinderMesh" id="CylinderMesh_2a3ss"]

[node name="VehicleBody3D" type="VehicleBody3D"]
script = ExtResource("1_xkwxr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_2j183")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)
mesh = SubResource("BoxMesh_hc25p")

[node name="VehicleWheel3D" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -1.457)
use_as_traction = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleWheel3D"]
transform = Transform3D(-4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2a3ss")

[node name="VehicleWheel3D2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1.579)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleWheel3D2"]
transform = Transform3D(-4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2a3ss")

[node name="VehicleWheel3D3" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1.579)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleWheel3D3"]
transform = Transform3D(-4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2a3ss")

[node name="VehicleWheel3D4" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -1.2529)
use_as_traction = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleWheel3D4"]
transform = Transform3D(-4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2a3ss")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -1.21669e-08, 8.6572e-08, 0, 0.990268, 0.139173, -8.74228e-08, 0.139173, -0.990268, 0, 2.5, -5)
